sql/test/unit/checks/only_support_bool_exps.exp
select check('foo');
^
|
 ----- ERROR
Error: line 1, character 0:
Expected a boolean expression inside CHECK
